--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,12 @@
   --color-background-color: #FDF0D5;
   --color-light-red: #C1121F;
   --color-dark-red: #780000;
+  --color-bg-dark: #19181f;
+  --color-dark-gray: #1F1F1F;
+  --color-light-gray: #6E6E6E;
+  --color-bg-dark-light: #6c0010;
+  --color-bg-dark-red: #350008;
+
 }
 
 
@@ -194,6 +200,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
