--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,10 +7,11 @@
   --color-background-color: #FDF0D5;
   --color-light-red: #C1121F;
   --color-dark-red: #780000;
-  --color-bg-dark: #19181f;
+  --color-bg-dark: #19181F;
+  --color-dark-card : #2B2B2B;
   --color-dark-gray: #1F1F1F;
   --color-light-gray: #6E6E6E;
-  --color-bg-dark-light: #6c0010;
+  --color-bg-light-red: #6c0010;
   --color-bg-dark-red: #350008;
 
 }
